[gd_scene load_steps=4 format=2]

[ext_resource path="res://class/mini_synth.gd" type="Script" id=1]
[ext_resource path="res://res/note.png" type="Texture" id=2]

[sub_resource type="AudioStreamGenerator" id=1]
buffer_length = 0.03

[node name="mini_synth" type="Control"]
anchor_right = 0.55
anchor_bottom = 0.711
margin_bottom = 0.0600281
rect_min_size = Vector2( 528, 384 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stream_player" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )

[node name="btn_enable" type="Button" parent="."]
margin_left = 400.0
margin_right = 528.0
margin_bottom = 32.0
toggle_mode = true
pressed = true
text = "Enable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_adsr_atk" type="Label" parent="."]
margin_left = 128.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 128.0
text = "ADSR Attack"
valign = 1

[node name="lbl_adsr_rel" type="Label" parent="."]
margin_left = 128.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 160.0
text = "ADSR Release"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_tone" type="OptionButton" parent="."]
margin_left = 128.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 224.0
focus_mode = 0
enabled_focus_mode = 0
text = "Cos"
items = [ "Cos", null, false, 0, null, "Saw", null, false, 1, null, "Square", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_octave" type="Label" parent="."]
margin_left = 320.0
margin_top = 192.0
margin_right = 432.0
margin_bottom = 223.0
text = "Octave Up: X
Octave Down: Z"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spin_octave" type="SpinBox" parent="."]
margin_left = 448.0
margin_top = 192.0
margin_right = 530.0
margin_bottom = 224.0
min_value = -1.0
max_value = 6.0
value = 5.0
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_atk" type="HSlider" parent="."]
margin_left = 256.0
margin_top = 96.0
margin_right = 528.0
margin_bottom = 128.0
min_value = 0.01
max_value = 2.0
step = 0.1
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider_rel" type="HSlider" parent="."]
margin_left = 256.0
margin_top = 128.0
margin_right = 528.0
margin_bottom = 160.0
min_value = 0.001
max_value = 2.0
step = 0.1
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sep_keyboard" type="HSeparator" parent="."]
margin_top = 232.0
margin_right = 528.0
margin_bottom = 248.0

[node name="img_keyboard" type="TextureRect" parent="."]
margin_top = 256.0
margin_right = 531.0
margin_bottom = 387.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_midi_i" type="CheckBox" parent="."]
margin_top = 192.0
margin_right = 128.0
margin_bottom = 224.0
focus_mode = 0
enabled_focus_mode = 0
text = "MIDI Input"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="btn_enable" to="." method="_on_btn_enable_toggled"]
[connection signal="item_selected" from="btn_tone" to="." method="_on_btn_tone_item_selected"]
[connection signal="value_changed" from="slider_atk" to="." method="_on_slider_atk_value_changed"]
[connection signal="value_changed" from="slider_rel" to="." method="_on_slider_rel_value_changed"]
[connection signal="gui_input" from="img_keyboard" to="." method="_on_img_keyboard_gui_input"]
[connection signal="toggled" from="btn_midi_i" to="." method="_on_btn_midi_i_toggled"]
